@@ -1,6 +1,7 @@
 recent:
 	cleanup for iptables and ipchains to save reallocs
 	fix input vs output thing in forwarding support for iptables
+		and ipchains
 
 0.7:
 	add "local" and "forward" syntax to state that packets are only
@@ -59,4 +60,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.30 2002/07/31 22:09:21 matthew Exp $
+$Id: HISTORY,v 1.31 2002/07/31 22:17:21 matthew Exp $
